@@ -4,6 +4,7 @@
 * Fix quantize data source poll and interval logging delays to avoid a currentTimeMillis() call
 * Add IP whitelist for virtual serial server sockets
 * Add debug log of incoming IPs on virtual serial server sockets
+* Improve handling of exception in data point listeners on initialize or terminate when only 1 listener is present
 
 *Version 3.5.4*
 * Bugfix: Convert dataPointTags, installedModules, and fileStores tables in database conversions
